mule-user-guide/v/3.2/transports-reference.adoc
= 可用传输

以下是Mule的已知传输列表（也称为"providers"）。某些功能包含在模块内而不是传输中 - 请参阅 link:/mule-user-guide/v/3.2/modules-reference[模块参考]。有关传输的更多信息，请参阅以下主题：

*  link:/mule-user-guide/v/3.2/connecting-using-transports[关于运输]
*  link:/mule-user-guide/v/3.2/configuring-a-transport[配置传输]
*  link:/mule-user-guide/v/3.2/creating-transports[创建传输]

如果您为Mule创建了一个交通工具，并希望与Mule社区分享，请在讨论中进行讨论
link:http://forums.mulesoft.com[MuleSoft论坛]。

以下列表包括https://www.anypoint.mulesoft.com/exchange/?type=connector[Anypoint Exchange]中列出的一些突出的传输（也称为连接器）。

请注意，在Mule 3中，CXF和Jersey不再被归类为运输工具。它们现在是使用底层传输（例如HTTP或HTTPS）在客户端和服务之间进行通信的模块。

==  Mule运输

[%header,cols="30s,70a"]
|===
| {运输{1}}说明
| link:/mule-user-guide/v/3.2/ajax-transport-reference[AJAX传输]
| Mule AJAX连接器允许Mule事件与Web浏览器异步发送和接收
| link:/mule-user-guide/v/3.2/ejb-transport-reference[EJB传输]
|允许使用出站端点进行EJB调用。
| link:/mule-user-guide/v/3.2/email-transport-reference[邮件传输]
|此传输提供各种电子邮件连接选项。
| link:/mule-user-guide/v/3.2/file-transport-reference[文件传输]
|该传输允许文件读取和写入本地文件系统上的目录。可以将连接器配置为过滤它读取的文件以及写入文件的方式，例如是使用二进制输出还是附加文件。
| link:/mule-user-guide/v/3.2/ftp-transport-reference[FTP传输]
|允许将文件读取/写入远程FTP服务器。
| link:/mule-user-guide/v/3.2/http-transport-reference[HTTP传输]
|此传输提供应用程序和其他Mule服务器之间Mule消息的HTTP传输。
| link:/mule-user-guide/v/3.2/https-transport-reference[HTTPS传输]
| HTTP传输的安全版本。
| link:/mule-user-guide/v/3.2/imap-transport-reference[IMAP传输]
|连接到IMAP邮件文件夹。
| link:/mule-user-guide/v/3.2/imap-transport-reference[IMAPS运输]
| IMAP传输的安全版本。
| link:/mule-user-guide/v/3.2/jdbc-transport-reference[JDBC传输]
|用于JDBC连接的传输。它的一些功能仅在Mule Enterprise中可用。
| link:/mule-user-guide/v/3.2/jetty-transport-reference[码头运输]
|通过嵌入轻量级Jetty服务器为通过HTTP公开服务提供支持。仅限入站端点。
| link:/mule-user-guide/v/3.2/jetty-ssl-transport[Jetty SSL Transport]
| Jetty运输的安全版本。
| link:/mule-user-guide/v/3.2/jms-transport-reference[JMS运输]
|用于JMS连接的Mule传输。 Mule本身不是JMS服务器，但可以使用任何JMS 1.1或1.02b兼容服务器（如ActiveMQ和OpenJms）以及商业供应商（如WebLogic，SonicMQ等）的服务。
| https://www.anypoint.mulesoft.com/exchange/?type=connector&search=ldap [LDAP传输]
|允许您向/从LDAP目录发送和接收Mule消息。
| link:/mule-user-guide/v/3.2/pop3-transport-reference[POP3S运输]  | POP3传输的安全版本。
| link:/mule-user-guide/v/3.2/quartz-transport-reference[石英运输]  |提供具有cron / interval定义的调度工具，并允许调度/重新安排Mule事件。
| link:/mule-user-guide/v/3.2/rmi-transport-reference[RMI运输]  |允许通过JRMP通过RMI发送和接收事件。
| link:/mule-user-guide/v/3.2/servlet-transport-reference[Servlet传输]  |为Mule组件提供监听通过servlet请求接收到的事件的功能。还有一个servlet实现使用Servlet传输来启用REST风格的服务访问。该传输现在与HTTP传输捆绑在一起。
| link:/mule-user-guide/v/3.2/smtp-transport-reference[SMTP传输]  |连接到SMTP服务器。
| link:/mule-user-guide/v/3.2/smtp-transport-reference[SMTPS运输]  | SMTP传输的安全版本。
| link:/mule-user-guide/v/3.2/ssl-and-tls-transports-reference[SSL传输]  |使用SSL或TLS提供安全的基于套接字的通信。
| link:/mule-user-guide/v/3.2/stdio-transport-reference[STDIO运输]  |此传输提供了与`System.in`和`System.out`等数据流的连接，对测试非常有用。
| link:/mule-user-guide/v/3.2/tcp-transport-reference[TCP传输]  |使事件能够通过TCP套接字发送和接收。
| link:/mule-user-guide/v/3.2/ssl-and-tls-transports-reference[TLS传输]  |使用SSL或TLS提供安全的基于套接字的通信。
| link:/mule-user-guide/v/3.2/udp-transport-reference[UDP传输]  |使事件能够作为数据报包发送和接收。
| link:/mule-user-guide/v/3.2/vm-transport-reference[VM传输]  |启用通过VM，嵌入式内存或持久队列发送和接收事件。
| link:/mule-user-guide/v/3.2/mule-wmq-transport-reference[WebSphere MQ传输]  | WebSphere MQ的Mule传输。此传输适用于Mule Enterprise 1.6及更高版本。
| link:/mule-user-guide/v/3.2/wsdl-connectors[WSDL连接器]  | CXF模块允许使用他们的WSDL合约调用远程Web服务。
| link:/mule-user-guide/v/3.2/xmpp-transport-reference[XMPP运输]  |通过XMPP（Jabber）即时消息协议提供连接。
|===

