mule-user-guide/v/3.3/transports-reference.adoc
= 可用传输

*  <<Mule Transports>>
*  <<Transport Matrix>>

以下是Mule ESB的已知传输列表（也称为"providers"）。某些功能包含在模块内而不是传输中 - 请参阅 link:/mule-user-guide/v/3.3/modules-reference[模块参考]。有关传输的更多信息，请参阅以下主题：

*  link:/mule-user-guide/v/3.3/connecting-using-transports[关于运输]
*  link:/mule-user-guide/v/3.3/configuring-a-transport[配置传输]
*  link:/mule-user-guide/v/3.3/creating-transports[创建传输]

==  Mule运输

[%header,cols="2*"]
|===
| {运输{1}}说明
| link:/mule-user-guide/v/3.3/ajax-transport-reference[AJAX传输]  | Mule AJAX连接器允许与网页浏览器异步发送和接收Mule事件
| Abdera Transport  |允许您通过 http://incubator.apache.org/abdera[Apache Abdera]项目轻松地与Atom提要和Atom发布协议服务器集成。

| link:/mule-user-guide/v/3.3/ejb-transport-reference[EJB传输]  |允许使用出站端点进行EJB调用。
| link:/mule-user-guide/v/3.3/email-transport-reference[邮件传输]  |此传输提供各种电子邮件连接选项。
| link:/mule-user-guide/v/3.3/file-transport-reference[文件传输]  |该传输允许将文件读取和写入本地文件系统上的目录。可以将连接器配置为过滤它读取的文件以及写入文件的方式，例如是使用二进制输出还是附加文件。
| link:/mule-user-guide/v/3.3/ftp-transport-reference[FTP传输]  |允许将文件读取/写入远程FTP服务器。
| link:/mule-user-guide/v/3.3/http-transport-reference[HTTP传输]  |此传输提供Mule消息在应用程序和其他Mule服务器之间的HTTP传输。
| link:/mule-user-guide/v/3.3/https-transport-reference[HTTPS传输]  | HTTP传输的安全版本。
| link:/mule-user-guide/v/3.3/imap-transport-reference[IMAP传输]  |连接到IMAP邮件文件夹。
| link:/mule-user-guide/v/3.3/imap-transport-reference[IMAPS运输]  | IMAP传输的安全版本。
| link:/mule-user-guide/v/3.3/jdbc-transport-reference[JDBC传输] +
*Enterprise Edition*  |用于JDBC连接的传输。它的一些功能仅在Mule Enterprise中可用。
| link:/mule-user-guide/v/3.3/jetty-transport-reference[码头运输]  |通过嵌入轻量级Jetty服务器为通过HTTP公开服务提供支持。仅限入站端点。
| link:/mule-user-guide/v/3.3/jetty-ssl-transport[Jetty SSL Transport]  | Jetty传输的安全版本。
| link:/mule-user-guide/v/3.3/jms-transport-reference[JMS运输]  |用于JMS连接的Mule传输。 Mule本身不是JMS服务器，但可以使用任何JMS 1.1或1.02b兼容服务器（如ActiveMQ和OpenJms）以及商业供应商（如Weblogic，SonicMQ等）的服务。
| LDAP传输 |允许您向/从LDAP目录发送和接收Mule消息。
| link:/mule-user-guide/v/3.3/pop3-transport-reference[POP3运输]  |连接到POP3收件箱。
| link:/mule-user-guide/v/3.3/pop3-transport-reference[POP3S运输]  | POP3传输的安全版本。
| link:/mule-user-guide/v/3.3/quartz-transport-reference[石英运输]  |提供具有cron / interval定义的调度工具，并允许调度/重新安排Mule事件。
| link:/mule-user-guide/v/3.3/rmi-transport-reference[RMI运输]  |允许通过JRMP通过RMI发送和接收事件。
| link:/mule-user-guide/v/3.3/servlet-transport-reference[Servlet传输]  |为Mule组件提供监听通过servlet请求接收到的事件的功能。还有一个servlet实现使用Servlet传输来启用REST风格的服务访问。该传输现在与HTTP传输捆绑在一起。
| link:/mule-user-guide/v/3.3/smtp-transport-reference[SMTP传输]  |连接到SMTP服务器。
| link:/mule-user-guide/v/3.3/smtp-transport-reference[SMTPS运输]  | SMTP传输的安全版本。
| link:/mule-user-guide/v/3.3/ssl-and-tls-transports-reference[SSL传输]  |使用SSL或TLS提供安全的基于套接字的通信。
| link:/mule-user-guide/v/3.3/stdio-transport-reference[STDIO运输]  |此传输提供了与`System.in`和`System.out`等数据流的连接，并且可用于ptest测试。
| link:/mule-user-guide/v/3.3/tcp-transport-reference[TCP传输]  |使事件能够通过TCP套接字发送和接收。
| link:/mule-user-guide/v/3.3/ssl-and-tls-transports-reference[TLS传输]  |使用SSL或TLS提供安全的基于套接字的通信。
| link:/mule-user-guide/v/3.3/udp-transport-reference[UDP传输]  |使事件能够作为数据报包发送和接收。
| link:/mule-user-guide/v/3.3/vm-transport-reference[VM传输]  |启用通过VM，嵌入式内存或持久队列发送和接收事件。
| link:/mule-user-guide/v/3.3/mule-wmq-transport-reference[WebSphere MQ传输] +
*Enterprise Edition*  | WebSphere MQ的Mule传输。此传输适用于Mule Enterprise 1.6及更高版本。
| link:/mule-user-guide/v/3.3/wsdl-connectors[WSDL连接器]  | CXF模块允许使用他们的WSDL合约调用远程Web服务。
| link:/mule-user-guide/v/3.3/xmpp-transport-reference[XMPP运输]  |通过XMPP（Jabber）即时消息协议提供连接。
|===

== 传输矩阵

[%header%autowidth.spread]
|===
|运输 |文档 |入站 |外向 |要求 |交易 |流 |重试{{ 8}} MEP  |默认MEP  | Maven工件
| link:/mule-user-guide/v/3.3/ajax-transport-reference[AJAX]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/ajax/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ajax/namespace-overview.html[SchemaDoc]  | image:check.png[查]  | {{4} } image:error.png[图片]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向 |一个三通 | org.mule.transport：骡传输的Ajax

| link:/mule-user-guide/v/3.3/file-transport-reference[文件]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/file/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_file/namespace-overview.html[SchemaDoc]  |
image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向 |单向 | org.mule.transport：骡传输文件

| link:/mule-user-guide/v/3.3/ftp-transport-reference[FTP]  |   |
image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |   |   | org.mule.transport：骡传输-FTP-EE

| link:/mule-user-guide/v/3.3/https-transport-reference[HTTPS]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/http/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_https/namespace-overview.html[SchemaDoc]  |
image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向请求响应 |请求响应 | org.mule.transport：mule-transport-https

| link:/mule-user-guide/v/3.3/imap-transport-reference[IMAPS]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/email/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_imaps/namespace-overview.html[SchemaDoc]  |
image:check.png[查]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  |单向 |单向 | org.mule.transport：骡传输-IMAPS

| link:/mule-user-guide/v/3.3/jdbc-transport-reference[JDBC]  |  |
image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  |   |   | org.mule.transport：骡传输-JDBC-EE

| link:/mule-user-guide/v/3.3/jetty-ssl-transport[Jetty SSL]  |   |
image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向请求响应 |请求响应 | org.mule.transport：mule-transport-jetty ssl

| link:/mule-user-guide/v/3.3/multicast-transport-reference[组播]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/multicast/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[SchemaDoc]  |
image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  |单向请求响应 |请求响应 | org.mule.transport：mule-transport-multicast

| link:/mule-user-guide/v/3.3/pop3-transport-reference[POP3S]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/email/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SchemaDoc]  |
image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  |单向 |单向 | org.mule.transport：骡传输-POP3S

| link:/mule-user-guide/v/3.3/rmi-transport-reference[RMI]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/rmi/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_rmi/namespace-overview.html[SchemaDoc]
| image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  |单向请求响应 |请求响应 | org.mule.transport：mule-transport-rmi

| link:/mule-user-guide/v/3.3/sftp-transport-reference[SFTP]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/sftp/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_sftp/namespace-overview.html[SchemaDoc]
| image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向请求响应 |单向 | org.mule.transport：mule-transport-sftp

| link:/mule-user-guide/v/3.3/smtp-transport-reference[SMTPS]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/email/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_smtps/namespace-overview.html[SchemaDoc]
| image:error.png[图片]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:error.png[图片]  | image:error.png[图片]  |单向 |单向 | org.mule.transport：骡传输-SMTPS

| link:/mule-user-guide/v/3.3/stdio-transport-reference[STDIO]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/stdio/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_stdio/namespace-overview.html[SchemaDoc]
| image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向 |单向 | org.mule.transport：骡-传输标准输入输出

| link:/mule-user-guide/v/3.3/ssl-and-tls-transports-reference[TLS]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/ssl/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_tls/namespace-overview.html[SchemaDoc]
| image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:error.png[图片]  | image:check.png[查]  | image:error.png[图片]  |单向请求响应 |请求响应 | org.mule.transport：mule-transport-tls

| link:/mule-user-guide/v/3.3/vm-transport-reference[VM]  | http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/vm/package-summary.html[的JavaDoc]， http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_vm/namespace-overview.html[SchemaDoc]
| image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | image:check.png[查]（XA） | {{单向请求响应 |单向 | org.mule.transport：mule-transport-vm

|===

=== 图例

*Transport*  - 交通工具的名称/协议+
*Docs*  - 链接到transport +的JavaDoc和SchemaDoc
*Inbound*  - 传输是否可以接收入站事件并可用于入站端点+
*Outbound*  - 传输是否可以生成出站事件并与出站端点+一起使用
*Request*  - 此端点是否可以通过请求调用直接查询（通过MuleClient或EventContext）+
*Transactions*  - 交易是否受交通工具支持。支持事务的传输可以在本地或分布式两阶段提交（XA）事务中进行配置。 +
*Streaming*  - 此传输是否可以处理输入流中传入的消息。这可以非常有效地处理大数据。有关更多信息，请参阅流式传输。 +
*Retry*  - 此传输是否支持重试策略。请注意，所有传输都可以配置Retry策略，但只有在这里标记的传输才能被MuleSoft +官方支持
*MEPs*  - 此传输+支持的消息交换模式
*Default MEP*  - 使用此传输的端点的默认MEP，它没有明确配置MEP +
*Maven Artifact*  - 组名称为 http://maven.apache.org/[Maven的]中此传输的工件名称

